# ampdup

./: .flake8  .gitignore  .pylintrc  LICENSE.md  README.md  basic_example.py  check-all.sh  develop.py  pylintrc  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/workflows/: ci.yml
ampdup/: __init__.py  base_client.py  connection.py  errors.py  future.py  idle_client.py  maybe.py  mpd_client.py  parsing.py  song.py  stats.py  status.py  types.py  typing.py  typing_inspect.py  util.py
test/: parsing_test.py  playlist_info_test.py  song_parsing_test.py  split_on_pred_test.py  stats_parsing_test.py  status_parsing_test.py
tests/: _test_util.py  enumerate_on_test.py  parsing_test.py  playlist_info_test.py  song_parsing_test.py  split_on_pred_test.py  stats_parsing_test.py  status_parsing_test.py  test_connection.py  test_enumerate_on.py  test_future.py  test_playlist_info.py  test_split_on_pred.py  test_stats_parsing.py  test_status_parsing.py  test_util.py  util_test.py
