[tool.poetry]
name = "ampdup"
version = "0.11.0"
description = "A type-hinted async python mpd client library."
authors = ["Tarcisio Eduardo Moreira Crocomo <tarcisio.crocomo+pypi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/tarcisioe/ampdup"
keywords = ["mpd", "type", "async"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.5"
flake8-per-file-ignores = "^0.6.0"
mypy = "^0.790"
pylint = "^2.6.0"
pylint-quotes = "^0.2.1"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
wrapt = "^1.12.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

