[tool.poetry]
name = "ampdup"
version = "0.12.0"
description = "A type-hinted async python mpd client library."
authors = ["Tarcisio Eduardo Moreira Crocomo <tarcisio.crocomo+pypi@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarcisioe/ampdup"
keywords = ["mpd", "type", "async"]

[tool.poetry.dependencies]
python = "^3.7"
anyio = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
typer = "^0.3.2"
typing-extensions = "^3.10.0.2"
trio = "^0.19.0"

[tool.black]
skip_string_normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
